--- a/Verification.ipynb
+++ b/Verification.ipynb
@@ -6,7 +6,7 @@
       "name": "Verification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNdG+FdY4/J96vml+vgwJwE",
+      "authorship_tag": "ABX9TyPGWD/S5LU/7x8dXYwvhV+V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -572,8 +572,8 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"Precision:\",metrics.accuracy_score(y_test, y_pred))\n",
-        "print(\"Accuracy:\",metrics.precision_score(y_test, y_pred))\n",
+        "print(\"Precision:\",metrics.precision_score(y_test, y_pred))\n",
+        "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))\n",
         "print(\"Recall:\",metrics.recall_score(y_test, y_pred))"
       ],
       "metadata": {
@@ -581,16 +581,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "z6Vxok4HKYyi",
-        "outputId": "2aaf5cc1-fa08-4fc0-b34b-1ef53d09e6f8"
+        "outputId": "446edf3e-4c44-4ea7-f234-683c811a4a57"
       },
-      "execution_count": 72,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Precision: 0.847457627118644\n",
-            "Accuracy: 0.75\n",
+            "Precision: 0.75\n",
+            "Accuracy: 0.847457627118644\n",
             "Recall: 0.10344827586206896\n"
           ]
         }
